--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1768,7 +1768,7 @@ We used *R* with *R Studio* [@RCT2020; @RStudioTeam2020] with the main packages 
 
 ## Ethics information
 
-The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...). Prior to testing, written informed consent will be obtained.
+The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...). Prior to testing, written informed consent will be obtained. Participants will receive 30€ in total or course credit for participation.
 
 ## Pilot data
 
@@ -1796,19 +1796,18 @@ The paradigm starts with the n-back levels one to four, presented sequentially w
 The levels are referred to by color (1-back black, 2-back red, 3-back blue, 4-back green) to avoid anchor effects in the ED procedure.
 To assess perceived task load, we will use the 6-item NASA Task Load Index (NASA-TLX) [@Hart1988], where participants evaluate their subjective perception of mental load, physical load, effort, frustration, performance, and time pressure during the task on a 20-point scale.
 After each level, participants fill out the NASA-TLX on a tablet.
-Then, they complete the ED procedure on screen, where each possible pairing of the four n-back levels is presented in a randomized order.
-Participants are instructed to decide as realistically as possible, because one of their choices from the last iteration steps will be randomly chosen for one final run of n-back.
-This is only done to incentivise truthful behavior in the ED procedure, so the n-back data of this part will not be analyzed.
+Then, they complete the ED procedure on screen, where each possible pairing of the four *n*-back levels is presented in a randomized order.
+Participants are instructed to decide as realistically as possible, because one of their choices from the last iteration steps will be randomly chosen for one final run of *n*-back.
+This is only done to incentivise truthful behavior in the ED procedure, so the *n*-back data of this part will not be analyzed.
 The second session consists of an emotion regulation task with negative pictures and the instruction to suppress facial reactions, detach cognitively from the picture content, and distract oneself, respectively.
 The paradigm follows the same structure of task and ED procedure, but participants can decide which strategy they want to reapply in the last block.
-Participants will receive 30€ in total or course credit for participation.
 Study data will be collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden [@Harris2009; @Harris2019].
 
 ## Sampling plan
 
-A sample size analysis with *G\*Power* [@Faul2007; @Faul2009], based on the results of the ANOVA of Westbrook et al. [-@Westbrook2013] which showed an increase in reaction time with higher *n*-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta^2=0.04$, $\alpha=.05$, and $\beta=.95$. 
+*A priori* sample size determination was performed using with *G\*Power* [@Faul2007; @Faul2009], mainly based on the results of the analyses of Westbrook et al. [-@Westbrook2013] (see Design Table<!-- link this table -->). Results of these analyses revealed that ... <!-- showed an increase in reaction time with higher *n*-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta^2=0.04$, $\alpha=.05$, and $\beta=.95$. --> 
 The power analyses of all other hypotheses yielded smaller necessary sample sizes.
-To account for technical errors and exclusions of physiological data of the second lab session due to excessive noise, we aim to collect data of 60 to 70 participants.
+To account for technical errors and exclusions of physiological data of the second lab session due to excessive noise, we aim to collect data of 80 participants.
 
 ## Analysis plan
 
