--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1375,7 +1375,6 @@ Each hypothesis is detailed in the Design Table in the Appendix.
   h2b_total_r2 <- r.squaredGLMM(m1_h2b, pj2014 = T)
   
   ## H2b: n-back level
-  # according to https://doi.org/10.1186/s40536-018-0061-2 after Aiken and West 1991
   # model without effect
   m1_h2b_without <- lmer(sv ~ 1 + nfc.cgm + dprime.cwc + rt.cwc + correct.cwc + postcorrect.cwc + (level.cwc|subject),
                          data = h2b_data,
@@ -1869,7 +1868,7 @@ Level-1-predictors will be centered within cluster, whereas the level-2-predicto
 By this, the model yields interpretable parameter estimates. 
 We will visually inspect the residuals of the final model.
 The approximately normal distribution indicates no evidence to perform model criticism.  
-As effect size measures, we calculate pseudo *R²* for our model and *f²* to estimate the effects of n-back level and NFC according to <!--CK: please add https://doi.org/10.1186/s40536-018-0061-2 -->.
+As effect size measures, we calculate pseudo *R²* for our model and *f²* to estimate the effects of n-back level and NFC according to <!--CK: please add https://doi.org/10.1186/s40536-018-0061-2 (after Aiken and West 1991) -->.
 <!--CK: these are the corresponding values: h2b_total_r2, h2b_r2, h2c_r2 -->
 Third, we will perform a simple slopes analysis with n-back level as predictor and NFC as moderator. 
 To evaluate the moderating effect, we will calculate the Johnson-Neyman interval.
