--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -58,7 +58,7 @@ abstract          : |
  Individuals have a repertoire of emotion regulation (ER) strategies at their disposal, which they can use more or less flexibly. 
  In ER flexibility research, strategies that facilitate goal achievement are considered adaptive and therefore are subjectively valuable. 
  Individuals are motivated to reduce their emotional arousal effectively and to avoid cognitive effort. 
- Perceived costs of ER strategies in form of effort however, are highly subjective. 
+ Perceived costs of ER strategies in the form of effort, however, are highly subjective. 
  Subjective values (SVs) should therefore represent a trade-off between effectiveness and subjectively required cognitive effort. 
  However, SVs of ER strategies have not been determined so far. 
  We present a paradigm that is suitable for determining individual SVs of ER strategies. 
