--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -357,14 +357,15 @@ FigSubjEffortPilot = ggplot2::ggplot(Ratings_reg, aes(x = block, y = effort))+
 ### EMG
 
 # effect of valence on EMG
+# corrugator
 
 EMG_view <- data_EMG %>%
-  subset(data_EMG$segment == "view_neu" | data_ER$block == "view_neg")
-Ratings_view$block <- as.factor(Ratings_view$block)
+  subset(data_EMG$block == "view_neu" | data_EMG$block == "view_neg")
+EMG_view$block <- as.factor(EMG_view$block)
 
-SubjArousalView_aov <- afex::aov_ez(data = Ratings_view,
+EMGCorrView_aov <- afex::aov_ez(data = EMG_view,
                                id = "ID",
-                               dv = "arousal",
+                               dv = "Corr",
                                within = "block",
                                fun_aggregate = mean,
                                include_aov = TRUE) 
